tests/ui/parser/issues/issue-101540.rs
struct S1 {
    struct S2 {
    //~^ ERROR structs are not allowed in struct definitions
    }
}

fn main() {}
